--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-screens": "~3.11.1",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.7",
-    "react-native-gesture-handler": "~2.2.1"
+    "react-native-gesture-handler": "~2.2.1",
+    "@expo/webpack-config": "~0.16.21"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
